fix: display none in collapse component

--- a/src/styles/objects/_molecule.collapse.scss
+++ b/src/styles/objects/_molecule.collapse.scss
@@ -1,9 +1,6 @@
 .c-collapse {
   width: 100%;
-
-  &__content {
-    display: none;
-  }
+  display: none;
 
   &--open > &__content {
     display: block;
